--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,17 @@
+<!--
+ * @File:
+ * @Module:
+ * @Company: BEPAL
+ * @GitHub: https://github.com/Raven2049
+ * @Author: Shen Xiang
+ -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>Raven-blog</title>
   </head>
   <body>
